Thu Nov  3 15:01:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c: include sys/sysmacros.h for ArchLinux which deprecated
	  use of major() and minor() in sys/types.h.

Wed Nov  2 08:45:49 2016  Dmitry Gritsay  <unseductable@gmail.com>

	* doc/extension.rdoc: set ANYARGS as arguments for func1 and func2.

	* doc/extension.rdoc: mention the exception object which is passed
	  to func2 as the second argument.  [Fix GH-1471]

Wed Nov  2 07:34:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (rb_num_coerce_bit): enable bit operations with
	  coercing by non-integer object.  [ruby-core:77783] [Bug #12875]

Tue Nov  1 01:31:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func_round): round(3) in x86_64-w64-mingw32
	  is not accurate in an edge case.  [ruby-core:77794] [Bug #12878]

Mon Oct 31 17:36:04 2016  Code Ahss  <aycabta@gmail.com>

	* test/test_forwardable.rb (TestForwardable#test_on_private_method):
	  add test for [Bug #12782] [Bug #12840]

Mon Oct 31 11:08:51 2016  Samuel Williams  <samuel.williams@oriontransfer.co.nz>

	* lib/uri/generic.rb (URI::Generic#merge): merge merge0.
	  [GH-1469]

Sun Oct 30 15:32:43 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update
	  rubygems to 2.6.8.
	  Release note of 2.6.8: https://github.com/rubygems/rubygems/commit/9fb8880976f5ab998912898b091d88aa10eb1d4a

Sun Oct 30 06:39:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/windows_1254.c: Fix typo. Reported by k-takata at
	  https://github.com/k-takata/Onigmo/commit/ceb59cc. Thanks!

Sat Oct 29 19:59:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (cond0): !-operator is a method call, no warning for
	  literal in condition.  [ruby-core:77801] [Bug #12881]

Sat Oct 29 10:09:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): turn flip-flop in a not-operator
	  into a boolean value.  fix up r56315
